2006-02-23  Roland McGrath  <roland@redhat.com>

	* include/libc-symbols.h: Fix comment typo.
	From Peter Kjellerstedt <peter.kjellerstedt@axis.com>.

	* sysdeps/unix/sysv/linux/i386/fchownat.c: Diddle code so that "fail"
	label is always used.

	[BZ #2172]
	* bits/syslog-path.h: New file.
	* misc/Makefile (headers): Add it.
	* misc/sys/syslog.h: Include it.
	(_PATH_LOG): Macro removed.
	From Robert Millan <robertmh@gnu.org>.

	* sysdeps/unix/sysv/linux/ftruncate64.c: Find generic implementation
	in misc/, not posix/.
	Reported by David S. Miller <davem@davemloft.net>.

2006-02-23  Jakub Jelinek  <jakub@redhat.com>

	* posix/sched_yield.c (__sched_yield): Add libc_hidden_def.
	* sysdeps/mach/sched_yield.c (__sched_yield): Likewise.

2006-02-22  Roland McGrath  <roland@redhat.com>

	* po/libc.pot: Regenerated.

2006-02-22  Jakub Jelinek  <jakub@redhat.com>

	* nis/ypclnt.c (yperr_string, ypbinderr_string): Add N_()
	around string literals.

2005-10-03  Jakub Jelinek  <jakub@redhat.com>

	* nscd/selinux.c (audit_init): Print error string in the failure
	message.

2006-02-21  Roland McGrath  <roland@redhat.com>

	* sysdeps/unix/sysv/linux/kernel-features.h
	(__ASSUME_CLONE_THREAD_FLAGS): Consolidate definitions.

	* sysdeps/unix/sysv/linux/x86_64/sys/epoll.h: Update comment, remove
	__THROW from epoll_wait, to match .../linux/sys/epoll.h file.

2006-02-03  Jakub Jelinek  <jakub@redhat.com>

	* manual/filesys.texi (futimes): Fix prototype.

2004-08-09  Paul Eggert  <eggert@cs.ucla.edu>

	[BZ #315]
	* manual/memory.texi (Obstacks Data Alignment): The default
	alignment is not 4: it is enough to hold any type of data.
	Problem reported by Benno in
	<http://sources.redhat.com/ml/libc-alpha/2004-08/msg00055.html>.

2005-11-15  Robert Millan  <robertmh@gnu.org>

	[BZ #2161]
	* manual/llio.texi (read, write): Document EINVAL on unaligned access.

2006-02-21  Roland McGrath  <roland@redhat.com>

	* sysdeps/i386/i686/memset.S: Fix treatment of unaligned pointer.