@@ -20,9 +20,9 @@ run_hooks (void (*const list[]) (void))
     (**list) ();
 }
 
-static char __EH_FRAME_BEGIN__[]
-     __attribute__ ((section (".eh_frame")))
-     = { };
+static const char __EH_FRAME_BEGIN__[]
+  __attribute__ ((used, section (".eh_frame")))
+  = { };
 
 /* This function will be called from _init in init-first.c.  */
 void
